[workspace]

members = [
    "apps/api",
    "apps/cdn",
    "apps/event-api",
    "apps/mongo-change-stream",
    "apps/mongo-typesense",
    "macros",
    "shared",
    "tools/*",
]

resolver = "2"

[profile.dev]
opt-level = 1

[profile.release-debug]
inherits = "release"
strip = false
debug = true
lto = "thin"

[profile.release-lto]
inherits = "release"
lto = "fat"
debug = false
strip = true

[workspace.dependencies]
shared = { path = "shared" }
macros = { path = "macros" }

[patch.crates-io]
scuffle-batching = { git = "https://github.com/scufflecloud/scuffle", branch = "foundations-v2" }
scuffle-http = { git = "https://github.com/scufflecloud/scuffle", branch = "foundations-v2" }
scuffle-bootstrap = { git = "https://github.com/scufflecloud/scuffle", branch = "foundations-v2" }
scuffle-settings = { git = "https://github.com/scufflecloud/scuffle", branch = "foundations-v2" }
scuffle-bootstrap-telemetry = { git = "https://github.com/scufflecloud/scuffle", branch = "foundations-v2" }
scuffle-metrics = { git = "https://github.com/scufflecloud/scuffle", branch = "foundations-v2" }
scuffle-context = { git = "https://github.com/scufflecloud/scuffle", branch = "foundations-v2" }
scuffle-image-processor-proto = { git = "https://github.com/scufflecloud/scuffle", branch = "foundations-v2" }
scuffle-signal = { git = "https://github.com/scufflecloud/scuffle", branch = "foundations-v2" }
