[workspace]

members = [
    "apps/api",
    "apps/cdn",
    "apps/discord-bot",
    "apps/event-api",
    "apps/mongo-change-stream",
    "apps/mongo-typesense",
    "macros",
    "shared",
    "tools/*",
]

resolver = "2"

[profile.dev]
opt-level = 1

[profile.release-debug]
inherits = "release"
strip = false
debug = true
lto = "thin"

[profile.release-lto]
inherits = "release"
lto = "fat"
debug = false
strip = true

[workspace.dependencies]
shared = { path = "shared" }
macros = { path = "macros" }
