[package]
name = "shared"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 with Commons Clause"

[dependencies]
hex = "0.4"
tracing = "0.1"
serde = { version = "1.0" }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
prometheus-client = "0.22"
tokio = "1.0"
anyhow = "1.0"
hyper = { version = "1", features = ["server", "http1", "http2"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = [
    "tokio",
    "server",
    "http1",
    "http2",
] }
scuffle-foundations = { git = "https://github.com/ScuffleTV/scuffle.git", branch = "foundations" }
once_cell = "1.19"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "json",
] }
thiserror = "1.0"
memory-stats = "1"
tokio-stream = "0.1"
tokio-rustls = "0.26"
fnv = "1.0"
rustls-pemfile = "2.1"
rustls = "0.23"
async-nats = "0.35.1"
utoipa = { version = "4.2", features = ["repr"] }
serde_repr = "0.1"
tokio-util = "0.7"
bitmask-enum = "2"
enum-impl = "0.1"
clickhouse = { version = "0.11.6", features = ["uuid", "time"] }
time = "0.3.36"
uuid = { version = "1.8.0", features = ["serde"] }
mongodb = { version = "2.8", features = ["bson-chrono-0_4", "bson-uuid-1"] }
ulid = { version = "1.1", features = ["serde", "uuid"] }
async-stripe = { version = "0.37.0", features = ["runtime-tokio-hyper-rustls"] }
