[package]
name = "api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 with Commons Clause"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
scuffle-foundations = { git = "https://github.com/ScuffleTV/scuffle.git", branch = "foundations" }
scuffle-image-processor-proto = { git = "https://github.com/ScuffleTV/scuffle.git", branch = "foundations", features = ["client"] }
prost = "0.13"
tonic = { version = "0.12" }
regex = "1.10.6"
url = "2.3.1"
rustls = { version = "0.23.12", features = ["aws-lc-rs"] }

serde = { version = "1.0", features = ["derive"] }
bitmask-enum = "2"
serde_repr = "0.1"
tracing = "0.1"
hyper = { version = "1", features = ["full"] }
async-graphql = { version = "7.0.6", features = ["apollo_tracing", "tracing", "chrono", "time"] }
async-graphql-axum = "7.0.6"

async-stripe = { version = "0.39.1", features = ["runtime-tokio-hyper-rustls", "async"] }
crc = "3.2.1"
x509-certificate = "0.23.1"
rsa = "0.9.6"

async-trait = "0.1.80"
async-nats = "0.36.0"
anyhow = "1"
jwt-next = "0.17.0"
hmac = "0.12.1"
http-body = "1.0"
cookie = { version = "0.18.1", features = ["percent-encode"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
hex = "0.4"
bytes = "1.7.1"
serde_json = "1.0"
rmp-serde = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }
date_component = "0.4.1"
time = { version = "0.3.36", features = ["serde"] } # clickhouse is cringe and uses time instead of chrono
sha2 = "0.10.8"
base64 = "0.22.1"
urlencoding = "2"
futures = "0.3"
reqwest = { version = "0.12.5", features = ["json", "rustls-tls", "http2", "charset"], default-features = false }
rand = "0.8"
pin-project = "1"
thiserror = "1"
utoipa = { version = "4.2", features = ["repr"] }
itertools = "0.13"
mongodb = "3.0"
bson = { version = "2.11", features = ["chrono-0_4", "uuid-1"] }
clickhouse = "0.12"
typesense_codegen = { git = "https://github.com/typesense/typesense-rust.git" }

tower-http = { version = "0.5", features = ["trace", "cors", "request-id"]}
axum = "0.7"
tower = "0.5.0"
spin = "0.9"
typed-builder = "0.20.0"

ipnet = { version = "2.9.0", features = ["serde"] }

shared = { workspace = true }

fred = { version = "9.2.1", features = ["enable-rustls", "dns", "sentinel-client", "sentinel-auth", "metrics", "replicas", "partial-tracing", "i-scripts"]}

[dev-dependencies]
axum = { version = "0.7", features = ["macros"] }

[features]
default = []
