[package]
name = "api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 with Commons Clause"

[dependencies]
tokio = { version = "1.38", features = ["full"] }

scuffle-bootstrap = "0.0.2"
scuffle-context = "0.0.2"
scuffle-metrics = "0.0.4"
scuffle-batching = "0.0.4"
scuffle-bootstrap-telemetry = "0.0.3"
scuffle-signal = { version = "0.0.2", features = ["bootstrap"] }
scuffle-settings = { version = "0.0.2", features = ["toml", "templates", "cli", "bootstrap"] }
scuffle-http = { version = "0.0.4", features = ["axum", "http1", "http2"], default-features = false }
image-processor-proto = { path = "../image-processor/proto", features = ["client"] }

prost = "0.13"
tonic = { version = "0.12" }
regex = "1.10.6"
url = "2.3.1"
rustls = { version = "0.23.12", features = ["aws-lc-rs"] }
smart-default = "0.7.1"

serde = { version = "1.0", features = ["derive"] }
bitmask-enum = "2"
serde_repr = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
hyper = { version = "1", features = ["full"] }
async-graphql = { version = "7.0.6", features = ["apollo_tracing", "tracing", "chrono", "time"] }
async-graphql-axum = "7.0.6"

async-stripe = { version = "0.39.1", features = ["runtime-tokio-hyper-rustls", "async"] }
crc = "3.2.1"
x509-certificate = "0.24.0"
rsa = "0.9.6"

async-trait = "0.1.80"
async-nats = "0.38.0"
anyhow = "1"
jwt-next = "0.17.0"
hmac = "0.12.1"
http-body = "1.0"
cookie = { version = "0.18.1", features = ["percent-encode"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
hex = "0.4"
bytes = "1.7.1"
serde_json = "1.0"
rmp-serde = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }
time = { version = "0.3.36", features = ["serde"] } # clickhouse is cringe and uses time instead of chrono
sha2 = "0.10.8"
base64 = "0.22.1"
urlencoding = "2"
futures = "0.3"
reqwest = { version = "0.12.8", features = ["json", "rustls-tls", "http2", "charset"], default-features = false }
rand = "0.8"
pin-project = "1"
thiserror = "2.0.3"
utoipa = { version = "4.2", features = ["repr"] }
itertools = "0.13"
mongodb = { version = "3.0", features = ["snappy-compression", "zlib-compression", "zstd-compression"] }
bson = { version = "2.11", features = ["chrono-0_4", "uuid-1"] }
clickhouse = "0.13.0"
typesense-rs = { version = "27.0.1", features = ["bon"] }

tower-http = { version = "0.6.1", features = ["trace", "cors", "request-id", "compression-br", "compression-deflate", "compression-gzip", "compression-zstd"] }
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = "0.5.0"
spin = "0.9"
typed-builder = "0.20.0"

uuid = { version = "1.1.2", features = ["serde"] }

ipnet = { version = "2.9.0", features = ["serde"] }

shared = { workspace = true }

fred = { version = "10.0.0", features = ["enable-rustls", "dns", "sentinel-client", "sentinel-auth", "metrics", "replicas", "i-scripts"]}
oauth2 = "5.0.0"

[features]
default = []
