[package]
name = "cdn"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
tokio-util = "0.7.11"
scuffle-foundations = { git = "https://github.com/ScuffleTV/scuffle.git", branch = "foundations" }
tower = "0.4"
tower-http = { version = "0.5.2", features = ["trace", "cors", "request-id"] }
tracing = "0.1.40"
aws-sdk-s3 = { version = "1.45.0", features = ["behavior-version-latest"] }
futures = "0.3.30"
anyhow = "1.0.86"
bytes = "1.7.1"
moka = { version = "0.12.8", features = ["future"] }
scc = "2.1.16"
thiserror = "1.0.63"
chrono = "0.4.38"
