[package]
name = "data-brittler"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 with Commons Clause"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
thiserror = "1.0.58"
anyhow = "1"
futures = "0.3.30"
fnv = "1.0.7"
regex = "1.10.4"
once_cell = "1.19.0"

scuffle-config = "0.0.1"
scuffle-utils = { git = "https://github.com/ScuffleTV/scuffle.git", branch = "feature/website", features = [
    "http",
    "signal",
    "context",
    "prelude",
    "database",
    "dataloader",
] }

cap = "0.1"
tikv-jemallocator = { version = "0.5", features = ["background_threads"] }

shared = { workspace = true }

serde = { version = "1.0", features = ["derive"] }
bitmask-enum = "2"
mongodb = { version = "2.8.2", features = ["bson-chrono-0_4"] }
chrono = "0.4.37"
ulid = "1.1.2"
serde_json = "1.0.115"
tokio-postgres = "0.7.10"
postgres-from-row = "0.5"
postgres-types = "0.2"

sailfish = "0.8.3"
uuid = "1.8.0"
reqwest = "0.12.3"
