[package]
name = "data-brittler"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 with Commons Clause"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
thiserror = "1.0.61"
anyhow = "1"
futures = "0.3.30"
fnv = "1.0.7"
regex = "1.10.5"
once_cell = "1.19.0"

reqwest = "0.12.5"
bytes = "1.6.0"
scuffle-config = "0.0.1"
scuffle-foundations = { git = "https://github.com/ScuffleTV/scuffle.git", branch = "foundations", default-features = false, features = [
    "opentelemetry",
    "runtime",
    "macros",
    "logging",
    "env-filter",
    "settings",
    "bootstrap",
    "cli",
    "metrics",
    "context",
    "signal",
] }
scuffle-image-processor-proto = { git = "https://github.com/ScuffleTV/scuffle.git", branch = "foundations", features = [
    "client",
    "serde",
] }
tonic = "0.12"
async-nats = "0.36.0"
prost = "0.13"

cap = "0.1"

shared = { workspace = true }

serde = { version = "1.0", features = ["derive"] }
bitmask-enum = "2"
mongodb = "3.0"
bson = { version = "2.11", features = ["chrono-0_4", "uuid-1", "time-0_3"] }
chrono = "0.4.38"
serde_json = "1.0.118"
clickhouse = "0.12"
rustls = { version = "0.23", features = ["aws-lc-rs"] }

sailfish = "=0.8.3"
uuid = "1.9.1"
serde_repr = "0.1.19"
time = "0.3.36"
async-stripe = { version = "0.39.1", default-features = false, features = [
    "runtime-tokio-hyper-rustls",
    "checkout",
    "billing",
    "products",
    "chrono",
    "stream",
] }
tokio-util = "0.7.11"
