[package]
name = "discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
async-nats = "0.38.0"
shared = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
anyhow = "1.0"
bson = "2"
smart-default = "0.7.1"
rmp-serde = "1.3.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
serenity = "0.12.4"

scuffle-bootstrap = "0.0.2"
scuffle-context = "0.0.2"
scuffle-metrics = "0.0.4"
scuffle-bootstrap-telemetry = "0.0.3"
scuffle-signal = { version = "0.0.2", features = ["bootstrap"] }
scuffle-settings = { version = "0.0.2", features = ["toml", "templates", "cli", "bootstrap"] }