[package]
name = "event-api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 with Commons Clause"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
scuffle-config = "0.0.1"
scuffle-utils = { git = "https://github.com/ScuffleTV/scuffle.git", branch = "feature/website", features = ["http", "signal", "context", "prelude"] }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
once_cell = "1.19"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
thiserror = "1.0"
hyper = { version = "1", features = ["full"] }
async-nats = "0.35.0"
anyhow = "1"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio", "server", "server-auto"] }
rustls-pemfile = "2"
rustls = "0.23"
tokio-rustls = "0.26"
hyper-tungstenite = "0.13"
http-body = "1.0"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
hex = "0.4"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
urlencoding = "2"
url = "2"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
prometheus-client = "0.22"
scopeguard = "1.1"
rand = "0.8"
memory-stats = "1"
cap = "0.1"
tikv-jemallocator = { version = "0.5", features = ["background_threads"] }
const-lru = "1"
fnv = "1"
pin-project = "1"
bson = "2"
shared = { workspace = true }

[features]
default = []
