[package]
name = "event-api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 with Commons Clause"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
scuffle-foundations = { git = "https://github.com/ScuffleTV/scuffle.git", branch = "foundations" }
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"
once_cell = "1.19"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }
thiserror = "1.0"
async-nats = "0.35.1"
anyhow = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
hex = "0.4"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
urlencoding = "2"
url = "2"
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rand = "0.8"
const-lru = "1"
fnv = "1"
pin-project = "1"
bson = "2"
shared = { workspace = true }

hyper = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["trace", "cors", "request-id"]}
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"

[features]
default = []

[dev-dependencies]
axum-macros = "0.4.1"
