[package]
name = "event-api"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0 with Commons Clause"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive", "rc"] }
tracing = "0.1"
thiserror = "2.0.3"
async-nats = "0.38.0"
anyhow = "1"
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
hex = "0.4"
serde_json = "1.0"
rmp-serde = "1.3.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
urlencoding = "2"
url = "2"
futures = "0.3"
reqwest = { version = "0.12.8", features = ["json", "rustls-tls", "http2", "charset"], default-features = false }
rand = "0.8"
lru = "0.12.4"
fnv = "1"
pin-project = "1"
bson = "2"
shared = { workspace = true }

hyper = { version = "1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["trace", "cors", "request-id", "set-header"]}
axum = { version = "0.7", features = ["ws"] }
tower = "0.5.0"
http = "1"
quinn = "0.11.5"
rustls = "0.23"
rustls-pemfile = "2.1"
hyper-util = { version = "0.1", features = ["tokio", "server", "http1", "http2"] }
h3 = "0.0.6"
regex = "1.10.6"
smart-default = "0.7.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

scuffle-http = { version = "0.0.2", features = ["tls-rustls", "axum", "http1", "http2"], default-features = false }
scuffle-bootstrap = "0.0.1"
scuffle-context = "0.0.1"
scuffle-metrics = "0.0.2"
scuffle-batching = "0.0.1"
scuffle-bootstrap-telemetry = "0.0.2"
scuffle-signal = { version = "0.0.1", features = ["bootstrap"] }
scuffle-settings = { version = "0.0.1", features = ["toml", "templates", "cli", "bootstrap"] }


[features]
default = []

[dev-dependencies]
axum-macros = "0.4.1"
