[package]
name = "mongo-change-stream"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = "3"
bson = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }
async-nats = "0.38.0"
shared = { workspace = true }
fnv = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0.3"
tracing = "0.1"
anyhow = "1.0"
futures = "0.3"
bytes = "1.0"
smart-default = "0.7.1"
tracing-subscriber = "0.3"
rustls = { version = "0.23", features = ["aws-lc-rs"] }

scuffle-bootstrap = "0.0.1"
scuffle-context = "0.0.1"
scuffle-metrics = "0.0.1"
scuffle-batching = "0.0.1"
scuffle-bootstrap-telemetry = "0.0.1"
scuffle-signal = { version = "0.0.1", features = ["bootstrap"] }
scuffle-settings = { version = "0.0.1", features = ["toml", "templates", "cli", "bootstrap"] }
