[package]
name = "reprocess-badges"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
shared = { workspace = true }
bson = { version = "2.11", features = ["chrono-0_4", "uuid-1"] }
futures = "0.3"
scuffle-foundations = { git = "https://github.com/ScuffleTV/scuffle.git", branch = "foundations" }
