[package]
name = "tmp"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.38", features = ["full"] }
tracing = "0.1"
anyhow = "1"
futures = "0.3.30"
once_cell = "1.19.0"
tracing-subscriber = "0.3"
scuffle-image-processor-proto = { git = "https://github.com/ScuffleTV/scuffle.git", branch = "foundations", features = [
    "client",
    "serde",
] }
tonic = "0.12"
async-nats = "0.35.1"
prost = "0.13"
socket2 = "0.5.3"
